Resolve horizontal scrolling problem; closes #40.

--- a/assets/stylesheets/components/_treeometer.scss
+++ b/assets/stylesheets/components/_treeometer.scss
@@ -6,6 +6,7 @@ $progressBarRadius: 0;
 	position: relative;
 	margin: 0 auto;
 	max-width: 185px;
+	overflow-x: hidden;
 }
 
 .justonetree-treeometer svg {
